--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
     "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
